--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -22,7 +22,7 @@
 
     <div class="archive-post">
       <span class="archive-post-time">
-        {{ $element.Date.Format "01-02" }}
+        {{ $element.Date.Format "January 2" }}
       </span>
       <span class="archive-post-title">
         <a href="{{ $element.RelPermalink }}" class="archive-post-link">
