--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,6 @@
 <div class="logo-wrapper">
   <a href="{{ "/" | relLangURL }}" class="logo">
+    <img src="/img/monogram.svg"/>
     {{- if .Site.Params.logoTitle -}}
       {{ .Site.Params.logoTitle }}
     {{- else -}}
