--- a/src/css/_partial/_header.scss
+++ b/src/css/_partial/_header.scss
@@ -5,6 +5,7 @@
 .header {
   @include clearfix; 
   padding: $header-padding;
+  display: flex;
 
   @import '_header/logo';
   @import '_header/menu';
