--- a/src/css/_iconfont.scss
+++ b/src/css/_iconfont.scss
@@ -1,19 +1,17 @@
-// ==============================
-// Iconfont
-// ==============================
-
 @font-face {
-  font-family: 'iconfont';
-
-  src: url('../fonts/iconfont/iconfont.eot');
-  src: url('../fonts/iconfont/iconfont.eot#iefix') format('embedded-opentype'), // not '?#iefix', because webpack will add '?hash=[hash]'
-  url('../fonts/iconfont/iconfont.woff') format('woff'),
-  url('../fonts/iconfont/iconfont.ttf') format('truetype'),
-  url('../fonts/iconfont/iconfont.svg#iconfont') format('svg');
+  font-family: 'fontello';
+  src: url('../font/fontello.eot');
+  src: url('../font/fontello.eot#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2') format('woff2'),
+       url('../font/fontello.woff') format('woff'),
+       url('../font/fontello.ttf') format('truetype'),
+       url('../font/fontello.svg#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 %base-iconfont {
-  font-family: "iconfont" !important;
+  font-family: "fontello" !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -38,154 +36,61 @@
   @extend %base-iconfont;
 }
 
-/* Social Icon */
-.icon-bilibili:before {
-  content: "\e900";
-  font-size: .9em;
-  position: relative;
-  top: -4px;
-}
-.icon-instagram:before {
-  font-size: .95em;
-  content: "\e611";
-  position: relative;
-  top: 1px;
-}
-.icon-douban:before {
-  content: "\e610";
-  position: relative;
-  top: 2px;
-}
-.icon-tumblr:before {
-  content: "\e69f";
-  font-size: .85em;
-  position: relative;
-  top: -2px;
-}
-.icon-linkedin:before {
-  content: "\e60d";
-  position: relative;
-  top: -2px;
-}
-.icon-twitter:before {
-  content: "\e600";
-}
-.icon-weibo:before {
-  content: "\e602";
-  position: relative;
-  top: 2px;
-}
-.icon-stack-overflow:before {
-  content: "\e902";
-  font-size: .85em;
-  position: relative;
-  top: -4px;
-}
-.icon-email:before {
-  content: "\e605";
-  position: relative;
-  top: -2px;
-}
-.icon-facebook:before {
-  content: "\e601";
-  font-size: .95em;
-  position: relative;
-  top: -2px;
-}
-.icon-gitlab:before {
-  content: "\e901";
-  font-size: .9em;
-  position: relative;
-  top: -4px;
+.icon-close:before {
+  content: "\e805";
 }
 .icon-github:before {
-  content: "\e606";
+  content: "\f09b";
   position: relative;
   top: -1px;
 }
-.icon-rss:before {
-  content: "\e604";
-}
-.icon-google:before {
-  content: "\e609";
-  position: relative;
-  top: 2px;
-}
-.icon-zhihu:before {
-  content: "\e607";
+.icon-gitlab:before {
+  content: "\f296";
   font-size: .9em;
-}
-.icon-pocket:before {
-  content: "\e856";
   position: relative;
-  top: 2px;
+  top: -4px;
 }
-
-/* Generic Icon */
+.icon-goodreads:before {
+  content: '\e800';
+  position: relative;
+  top: -1px;
+}
 .icon-heart:before {
-  content: "\e608";
+  content: "\e806";
 }
-.icon-right:before {
-  content: "\e60a";
+.icon-instagram:before {
+  content: '\f16d';
+  font-size: .95em;
+  position: relative;
+  top: 1px;
 }
 .icon-left:before {
-  content: "\e60b";
-}
-.icon-up:before {
-  content: "\e60c";
-}
-.icon-close:before {
-  content: "\e60f";
+  content: "\e801";
 }
 .icon-link:before {
-  content: "\e909";
+  content: "\e804";
 }
-
-/* Admonition Icon */
-/*
-.icon-chevron-down:before {
-  content: "\e908";
+.icon-link-ext:before { content: '\f08e'; } /* '' */
+.icon-linkedin:before {
+  content: "\f0e1";
+  position: relative;
+  top: -2px;
 }
-.icon-format-quote:before {
-  content: "\e904";
+.icon-mail:before {
+  content: "\f0e0";
+  position: relative;
+  top: -2px;
 }
-.icon-pencil:before {
-  content: "\e903";
+.icon-monogram:before { content: '\e803'; } /* '' */
+.icon-right:before {
+  content: "\e802";
 }
-.icon-list-numbered:before {
-  content: "\e9b9";
+.icon-rss:before {
+  content: "\f09e";
 }
-.icon-list:before {
-  content: "\e9bb";
+.icon-twitter:before {
+  content: "\f099";
 }
-.icon-warning:before {
-  content: "\ea07";
+.icon-up:before {
+  content: "\f102";
 }
-.icon-question:before {
-  content: "\ea09";
-}
-.icon-info:before {
-  content: "\ea0c";
-}
-.icon-cross:before {
-  content: "\ea0f";
-}
-.icon-checkmark:before {
-  content: "\ea10";
-}
-.icon-fire:before {
-  content: "\e905";
-}
-.icon-danger:before {
-  content: "\e905";
-}
-.icon-flame:before {
-  content: "\e905";
-}
-.icon-hot:before {
-  content: "\e905";
-}
-.icon-bulb:before {
-  content: "\e906";
-}
-*/
