--- a/src/css/_partial/_header/_menu.scss
+++ b/src/css/_partial/_header/_menu.scss
@@ -3,13 +3,13 @@
 // =============================
 
 .site-navbar {
-  float: right;
+  margin-left: auto;
 
   .menu {
     display: inline-block;
     position: relative;
-    padding-left: 0;
-    padding-right: 25px;
+    padding-left: 25px;
+    padding-right: 0;
     font-family: $global-serif-font-family;
 
     .menu-item {
