--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -38,7 +38,7 @@ $gray: #cacaca !default;
 $dark-gray: #8a8a8a !default;
 
 // ======= Google Fonts ======= //
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans);
 
 
 // ========== Global ========== //
@@ -58,10 +58,10 @@ $global-container-padding: 0 20px !default;
 $global-lineheight: 1.5 !default;
 
 // Font family of the site.
-$global-font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif !default;
+$global-font-family: 'Open Sans', sans-serif !default;
 
 // Serif font family of the site.
-$global-serif-font-family: 'Roboto Slab', Athelas, STHeiti, Microsoft Yahei, serif !default;
+$global-serif-font-family: 'Roboto Slab', serif !default;
 
 // Background color of the site.
 $global-background: $white !default;
@@ -82,13 +82,13 @@ $global-headings: (
 $header-padding: 20px 20px !default;
 
 // Font size of the logo.
-$logo-font-size: 48px !default;
+$logo-font-size: 30px !default;
 
 // Font family of the logo.
-$logo-font-family: 'Roboto Slab', cursive, LiSu, sans-serif !default;
+$logo-font-family: 'Roboto Slab', serif !default;
 
 // Margin of menu item.
-$menu-item-margin-left: 10px !default;
+$menu-item-margin-left: 21px !default;
 
 // Margin of menu item in mobile.
 $menu-item-mobile-margin: 5px !default;
@@ -183,8 +183,7 @@ $code-color: #c7254e !default;
 $code-font-size: 0.9em !default;
 
 // Font family of the code.
-$code-font-family: Consolas, Monaco, Menlo, "DejaVu Sans Mono",
- "Bitstream Vera Sans Mono", "Courier New", monospace !default;
+$code-font-family: Consolas, Menlo, Monaco, "Courier New", monospace !default;
 
 // Color of code highlight, solarized.
 $code-highlight-color: (
