--- a/src/css/_partial/_post/_content.scss
+++ b/src/css/_partial/_post/_content.scss
@@ -41,7 +41,7 @@
 
   a {
     color: $theme-color;
-    word-break: break-all;
+    // word-break: break-all;
 
     &:hover {
       border-bottom: $content-link-border;
